--- a/3.hafta/EgitimOncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
+++ b/3.hafta/EgitimOncesi/3.Hafta Eğitim Öncesi Görevleri.ipynb
@@ -338,7 +338,7 @@
       "source": [
         "yil = int(input(\"kontrol etmek istediginiz yili giriniz:\"))\n",
         "\n",
-        "if (yil % 400 == 0 or ((yil % 100 != 0) and (yil % 4 == 0))):\n",
+        "if (yil % 400 == or ((yil % 100 != 0) and (yil % 4 == 0))):\n",
         "    print(yil,\"artik yildir.\")\n",
         "else:\n",
         "    print(yil,\"artik yil degildir.\")"
