--- a/4.hafta/EgitimSonrasi/4.Hafta Eğitim Sonrası Görevleri.ipynb
+++ b/4.hafta/EgitimSonrasi/4.Hafta Eğitim Sonrası Görevleri.ipynb
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tekrar eden sayılar:  [10, 15, 20]\n",
+      "Tekrar eden sayılar:  [10, 10, 15, 15, 15, 20, 20, 20, 20]\n",
       "Tekrar etmeyen sayılar:  [5]\n"
      ]
     }
@@ -130,7 +130,7 @@
     "uniqueNumbers = []\n",
     "\n",
     "for number in numbers:\n",
-    "    if numbers.count(number) > 1 and number not in repeatNumbers:\n",
+    "    if numbers.count(number) > 1 :\n",
     "        repeatNumbers.append(number)\n",
     "    elif numbers.count(number) == 1:\n",
     "        uniqueNumbers.append(number)\n",
